Use record class for JSON API